[package]
name = "russian_roulette"
version = "0.1.0"
edition = "2021"
description = "A simple Russian Roulette game"

[dependencies]
aes-stream = "0.2.1"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "5.0.1"
indicatif = "0.17.8"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
sha2 = "0.10.8"
walkdir = "2.5.0"
